# awesome-claude-code

./: .gitignore  README.md  claude-code-training-programme.md  pyproject.toml
.claude/agents/: changelog-auditor.md  training-fixer.md  training-scanner.md
.claude/skills/: update-training.md
.claude/skills/update-training/: SKILL.md
docs/: 01-getting-started.md  02-interface.md  03-cli-commands.md  04-in-session-commands.md  05-keyboard-shortcuts.md  06-claudemd-architecture.md  07-effective-prompting.md  08-context-management.md  09-large-files.md  10-subagents.md  11-multimodal.md  11-skills.md  12-custom-commands.md  12-parallel-agents.md  13-hooks.md  13-skills.md  14-mcp-servers.md  14-ralf-loop.md  14a-mcp-vs-python.md  15-agent-sdk.md  15-mcp-vs-python.md  15-multimodal.md  16-agent-sdk.md  16-custom-commands.md  17-best-practices.md  17-github-actions.md  17-mcp-servers.md  18-best-practices.md  18-mcp-vs-python.md  19-agent-sdk.md  19-parallel-agents.md  20-github-actions.md  20-lsp-plugins.md  21-best-practices.md  21-ssh-multiplexing.md  22-hooks.md  22-lsp-plugins.md  23-parallel-features.md  23-permissions.md  23-ssh-multiplexing.md  (+21 more)
examples/01-memory/: .gitignore  CLAUDE.md  README.md
examples/01-memory/.claude/rules/: api.md  models.md
examples/01-memory/api/: CLAUDE.md  health.py
examples/01-memory/docs/: api-design.md  coding-standards.md  testing.md
examples/01-memory/models/: order.py
examples/01-memory/utils/: helpers.py  string_validation.py
examples/02-ralf-loop/: .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml
examples/02-ralf-loop/.claude/: settings.json
examples/02-ralf-loop/scripts/: run_tests.sh
examples/02-ralf-loop/tests/: test_app.py
examples/03-agent-teams/: .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/03-agent-teams/.claude/: settings.json
examples/03-agent-teams/src/agent_teams/: api.py  cli.py
examples/03-agent-teams/tests/: test_api.py  test_cli.py
examples/04-agent-teams-inspired-by-carlini/: .gitignore  AGENT_PROMPT.template.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  agent_loop.sh  monitor.sh  pyproject.toml  run.sh  status.sh  stop.sh
examples/04-agent-teams-inspired-by-carlini/tests/: accept.sh  analyze_logs.sh  run_test.sh
examples/04-agent-teams-inspired-by-carlini/tests/samples/csv-stats/: ACCEPT_SPEC.md
examples/04-agent-teams-inspired-by-carlini/tests/samples/csv-stats/project/: AGENT_PROMPT.md  sample.csv  stats.py
examples/04-agent-teams-inspired-by-carlini/tests/samples/csv-stats/project/current_tasks/: cli.txt  compute_stats.txt  filter_rows.txt  load_csv.txt  tests.txt
examples/04-agent-teams-inspired-by-carlini/tests/samples/fizzbuzz/: ACCEPT_SPEC.md
examples/04-agent-teams-inspired-by-carlini/tests/samples/fizzbuzz/project/: AGENT_PROMPT.md  fizzbuzz.py
examples/04-agent-teams-inspired-by-carlini/tests/samples/fizzbuzz/project/current_tasks/: add_cli.txt  implement_fizzbuzz.txt
examples/04-agent-teams-inspired-by-carlini/tests/samples/hello-python/: ACCEPT_SPEC.md
examples/04-agent-teams-inspired-by-carlini/tests/samples/hello-python/project/: AGENT_PROMPT.md  main.py
examples/04-agent-teams-inspired-by-carlini/tests/samples/hello-python/project/current_tasks/: add_tests.txt  implement_greet.txt
examples/05-skills-n-agents/: .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/05-skills-n-agents/.claude/agents/: a1-security-reviewer.md  a2-api-developer.md  a3-code-reviewer.md  api-developer.md  code-reviewer.md  security-reviewer.md
examples/05-skills-n-agents/.claude/skills/api-conventions/: SKILL.md
examples/05-skills-n-agents/.claude/skills/audit-codebase/: SKILL.md
examples/05-skills-n-agents/.claude/skills/explain-with-diagrams/: SKILL.md
examples/05-skills-n-agents/.claude/skills/generate-tests/: SKILL.md
examples/05-skills-n-agents/.claude/skills/pr-summary/: SKILL.md
examples/05-skills-n-agents/.claude/skills/publishing-domain/: SKILL.md
examples/05-skills-n-agents/.claude/skills/s1-api-conventions/: SKILL.md
examples/05-skills-n-agents/.claude/skills/s2-publishing-domain/: SKILL.md
examples/05-skills-n-agents/.claude/skills/s3-generate-tests/: SKILL.md
examples/05-skills-n-agents/.claude/skills/s4-safe-reader/: SKILL.md
examples/05-skills-n-agents/.claude/skills/s5-audit-codebase/: SKILL.md
examples/05-skills-n-agents/.claude/skills/s5-audit-codebase/checklists/: docstrings.md  error-handling.md  imports.md  naming.md  test-coverage.md  type-hints.md
examples/05-skills-n-agents/.claude/skills/s6-security-review/: SKILL.md
examples/05-skills-n-agents/.claude/skills/s7-explain-with-diagrams/: SKILL.md
examples/05-skills-n-agents/.claude/skills/s7-explain-with-diagrams/templates/: explanation-template.md
examples/05-skills-n-agents/.claude/skills/s8-pr-summary/: SKILL.md
examples/05-skills-n-agents/.claude/skills/safe-reader/: SKILL.md
examples/05-skills-n-agents/.claude/skills/security-review/: SKILL.md
examples/05-skills-n-agents/api/: auth.py  catalog.py  inventory.py
examples/05-skills-n-agents/models/: author.py  book.py
examples/05-skills-n-agents/tests/: test_auth.py  test_catalog.py  test_inventory.py
examples/05-skills-n-agents/utils/: validators.py
examples/06-pixi-devcontainer/: .gitignore  .mcp.json  BROWSER-AUTOMATION.md  README.md  pyproject.toml
examples/06-pixi-devcontainer/.devcontainer/: Dockerfile  cdp-relay.sh  devcontainer.json  init-firewall.sh  mcp-container.json  mcp-host-browser.json  playwright-launcher.sh  toggle-browser.sh
examples/06-pixi-devcontainer/src/06_pixi_devcontainer/: app.py
examples/06-pixi-devcontainer/tests/: conftest.py  test_ui.py
examples/07-mcp/: pyproject.toml
examples/07-mcp/.claude/: settings.json
examples/07-mcp/src/07_mcp/: analysis.py  models.py
tests/: __init__.py  test_examples.py  test_sdk_imports.py  test_sdk_integration.py
tests/cc_training/: __init__.py  test_examples.py  test_sdk_integration.py
