[project]
authors = [{name = "Peter Gagarinov", email = "4868370+pgagarinov@users.noreply.github.com"}]
name = "cc-training"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["claude-code-sdk>=0.0.25,<0.0.26", "claude-agent-sdk>=0.1.18,<0.2"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
cc_training = { path = ".", editable = true }

[tool.pixi.tasks]
