[project]
authors = [{name = "Peter Gagarinov", email = "4868370+pgagarinov@users.noreply.github.com"}]
name = "cc-training"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["claude-agent-sdk>=0.1.18,<0.2", "pytest>=9.0.2,<10", "pytest-asyncio>=1.3.0,<2", "pexpect>=4.9.0,<5"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
cc_training = { path = ".", editable = true }

[tool.pixi.tasks]
test = "pytest tests/ -v"
test-unit = "pytest tests/ -v -m 'not integration'"
test-integration = "pytest tests/ -v -m integration"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests as integration tests (require Claude Code auth)",
]
testpaths = ["tests"]
