[project]
authors = [{name = "Peter Gagarinov", email = "4868370+pgagarinov@users.noreply.github.com"}]
dependencies = ["panel>=1.8.7,<2", "matplotlib>=3.10.8,<4", "numpy>=2.4.2,<3"]
name = "06-pixi-devcontainer"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-aarch64"]

[tool.pixi.pypi-dependencies]
06_pixi_devcontainer = { path = ".", editable = true }

[tool.pixi.tasks]
app = "panel serve src/06_pixi_devcontainer/app.py --show --autoreload"
