[project]
authors = [{name = "Peter Gagarinov", email = "4868370+pgagarinov@users.noreply.github.com"}]
name = "07-mcp"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["polars>=1.38.1,<2", "pyright"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
07_mcp = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pyright = ">=1.1.408,<2"
